verificacao_de_checkbox

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="calcular">calcular</string>
     <string name="homem">Homem</string>
     <string name="mulher">Mulher</string>
+    <string name="taxa_metabolica_basal">TAXA METABOLICA BASAL</string>
+    <string name="harris_benedict">(Harris-Benedict)</string>
 </resources>
